support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_deprecated.i
%module xxx


%extern ext;

#warning Print this warning

#error This is an error

